# DiaScore

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: Dockerfile  main.py  schemas.py
api/api_test/: conftest.py  test_imputation.py  test_main.py
data/: split_data.py  test.csv  train.csv  val.csv
database/: crud.py  database.py  diabetes.db  imputer.joblib  main.py  models.py  preprocessing.py  schemas.py  test_crud.py  train_imputer.py
database/database_test/: test_crud.py  test_preprocessing.py
docs/: model_card.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ConfirmModal.jsx  FamilyInterview.css  FamilyInterview.jsx  Gauge.jsx  HistoryTableRow.jsx  MedicalForm.css  MedicalForm.jsx  Navbar.css  Navbar.jsx  PredictionResult.css  PredictionResult.jsx  ToastProvider.jsx
frontend/src/constants/: imputation.js
frontend/src/hooks/: useHistory.js
frontend/src/pages/: History.jsx  Home.jsx
frontend/src/utils/: csvExport.js  user.js
ml/notebooks/: 00_data_analysis.ipynb  01_data_exploration.ipynb
ml/scaler/: scaler.joblib  train_scaler.py
ml/src/: dataloader.py  dataset.py  diabetes_model.py  evaluate.py  predict.py  train.py
ml/weights/: best_model.pt
