[project]
name = "DiaScore"
version = "0.1.0"
description = "TODO: add description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "colorama==0.4.6",
    "fastapi==0.136.1",
    "fastapi-cli==0.0.24",
    "greenlet==3.4.0",
    "httpx==0.28.1",
    "iniconfig==2.3.0",
    "numpy==2.4.4",
    "packaging==26.1",
    "pandas==3.0.2",
    "scikit-learn>=1.7.0",
    "pluggy==1.6.0",
    "pydantic==2.13.2",
    "pydantic-core==2.46.2",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlalchemy==2.0.49",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "uvicorn==0.46.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
